# ZAIRE

./: README.md  partitions.csv
BT-MCU/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
CAMERA_HUB/: README.md  centralHandler.c  env-setup.sh  globalVar.h  main.c  test.c
CENTRAL_HUB/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
CONTROLLER/: CERTIFICATE OF COMPLITION.txt  CONTROLLER.ino  ConnectionManager.cpp  communicationCode.h  globalVar.h
CTRL-COMM2-MCU/: CTRL-COMM2-MCU.ino  CameraManager.cpp  README.md  communicationCode.h  controllerManager.cpp  eeprom_config.h  globalVar.h  pin_config.h  sd_read_write.cpp  serialCommunicationIndex.h  serialUARTManager.cpp
Camera/: README.md  env-setup.sh
DEMO/Z/main/: CMakeLists.txt  blindspot_config.c  buzzer_config.c  display_config.c  esp_now_config.c  globalVar.h  gpio_config.c  led_strip_config.c  main.c  task_config.c  walkie_config.c  zaire_system.c
H3/: README.md  env-setup.sh
HOST/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
HOST/main/: CMakeLists.txt  blindspot_config.c  display_config.c  dns_server.c  dns_server.h  espNow_config.c  globalVar.h  gpio_config.c  gps_config.c  html_config.c  i2c_device_config.c  ledStrip_config.c  led_strip_config.c  main.c  network_config.c  nvs_config.c  rtc_config.c  settings_config.c  tasks_config.c  test_config.c  uart_config.c  usb_mic_config.c  zaire_system.c  zaire_system.h
REMOTE/: CMakeLists.txt  sdkconfig
S2-HUB/: README.md  display_config.c  dns_server.c  globalVar.h  gps_config.c  i2c_device_config.c  main.c  rtc_config.c  sdkconfig  settings_config.c  tasks_config.c
S2-HUB/main/: CMakeLists.txt  SuperMon.c  display_config.c  ds3231.h  globalVar.h  gpio_config.c  gps_config.c  i2c_device_config.c  main.c  nvs_config.c  protocol_examples_utils.c  rtc_config.c  settings_config.c  tasks_config.c  zaire_system.c  zaire_system.h
S3-HUB/: CMakeLists.txt  README.md  sdkconfig
WALKIE-MCU/: Audioi2s.cpp  Audioi2s.h  CameraManager.cpp  README.md  WALKIE-MCU.ino  WalkieTalkieManager.cpp  accessManager.cpp  blindSpotMonitoring.cpp  globalVar.h  pin_config.h  serialCommunicationIndex.h  serialUARTManager.cpp  transport.cpp
WALKIE_HUB/: ES8311_config.cpp  README.md  WALKIE_HUB.ino  accessories_config.cpp  blindspotMonitoring_setUp.cpp  eeprom_setUp.cpp  globalVar.h  gpio_setUp.cpp  peerGlobalCodeAddr.h  task_config.cpp  uart_setUp.cpp  walkie_config.cpp
main/: BK3266_cmd_list.h  BK3266_config.c  CMakeLists.txt  DS3231_config.c  MAX17043_config.c  SuperMon.h  buzzer_config.c  camera_config.c  display_config.c  dns_server.c  dns_server.h  globalVar.h  globlaVar.h  gpio_config.c  i2s_config.c  idf_component.yml  main.c  network_config.c  nvs_config.c  peer_mesh_config.c  settings_config.c  task_config.c  uart_config.c  walkie_config.c  zaire_system.c  zaire_system.h
spiffs/: globalData.js  index.html  script.js  style.css
(+65 files in other folders)
