idf_component_register(SRCS 
                    "display_config.c"
                    "blindspot_config.c"
                    "buzzer_config.c"
                    "esp_now_config.c"
                    "walkie_config.c"
                    "led_strip_config.c"
                    "gpio_config.c"
                    "zaire_system.c" 
                    "task_config.c" 
                    "main.c"
                    INCLUDE_DIRS ".")
